<resources>
    <string name="app_name">Expense Management App</string>
    <string name="search_screen_name">Search</string>
    <string name="listExpense_screen_name">All expenses of trip</string>
    <string name="addTrip_screen_name">Add a new trip</string>
    <string name="addExpense_screen_name">Add a new expense details</string>
    <string name="updateTrip_screen_name">Update trip details</string>
    <string name="trip_name_input">Name of the Trip</string>
    <string name="trip_destination_input">Destination</string>
    <string name="trip_date_input">Date of the Trip</string>
    <string name="trip_description_input">Description</string>
    <string name="trip_assessment_input">Require Risks Assessment</string>
    <string name="assessment_choice_input">YES/NO</string>
    <string name="add_db_button">Add To Database</string>
    <string name="add_expense_db_button">Add Expense Details</string>
    <string name="details_button">View All Expenses</string>
    <string name="update_db_button">Update To Database</string>
    <string name="delete_db_button">Delete</string>
    <string name="delete_all_db_button">Delete All</string>
    <string name="search_bar">Search</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_destination">Please Enter Valid Destination</string>
    <string name="invalid_date">Please Enter Valid Date</string>
    <string name="invalid_choice">Please Enter Valid Choice</string>
    <string name="spinnerLabel">Choose an expense type</string>
    <string name="datetime">Date: </string>
    <string name="datetimeHint">Date </string>
    <string name="amount">Amount: </string>
    <string name="amountHint">Amount </string>
    <string name="destination">Destination: </string>
    <string name="description">Description: </string>
    <string name="assessment">Require Risks Assessment*: </string>
</resources>